Upload e download de arquivos de teste implementados

--- a/public/partials/atividade.html
+++ b/public/partials/atividade.html
@@ -41,6 +41,7 @@
             <a href="" class="btn" id="botao_arquivo" role="button">Clique aqui para selecionar o arquivo</a>
         </div>
         <span><b>{{arquivo.name}}</b></span>
+		<input hidden ng-model="atividade.nomeArquivoTeste" />
     </div>
 	<div>
 		<button type="submit" class="btn btn-primary">Salvar</button>
